# CabinOS

./: .gitignore  CMakeLists.txt  README.md  cabinos_can_ingest  cabinos_cli
.github/workflows/: ci.yml
cloud/: template.yaml
cloud/lambda/: handler.py
config/: policy.yaml
docs/: benchmark_results.md  cost_model.md  failure_modes.md
edge/: CMakeLists.txt
edge/include/cabinos/: actuation_guard.hpp  can_bridge.hpp  cloud_bridge.hpp  intent_router.hpp  policy_engine.hpp  service_broker.hpp  state_store.hpp  tier.hpp  vehicle_api.hpp  vehicle_api_grpc.hpp  vehicle_services.hpp
edge/proto/: services.proto  vehicle.proto
edge/src/: actuation_guard.cpp  benchmark_main.cpp  can_bridge.cpp  can_ingest_main.cpp  cloud_bridge.cpp  grpc_client_main.cpp  grpc_server_main.cpp  intent_router.cpp  main.cpp  policy_engine.cpp  service_broker.cpp  state_store_sqlite.cpp  vehicle_api.cpp  vehicle_api_grpc.cpp  vehicle_services.cpp
edge/tests/: intent_router_test.cpp
scripts/: can_simulator.py  cloud_bridge_smoke.sh  dashboard_server.py  requirements.txt  run_benchmarks.sh  run_failure_suite.sh  test_cloud_contract.sh  voice_input.py
scripts/dashboard/: index.html
scripts/failures/: cloud_down.sh  edge_proposal_manual.md  malformed_payload.sh  missing_utterance.sh
